chore: fix cannot connecto to pgbouncer
Signed-off-by: sanglee97 <admin@example.com>